--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,4 +4,4 @@ dependencies:
   flutter: ">=0.0.2 <0.1.0"
   syncbase: ">=0.0.6 <0.1.0"
 dev_dependencies:
-  sky_tools: any
+  sky_tools: ">=0.0.27 <0.1.0"
