--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: my_app
 description: A minimal Flutter project.
 dependencies:
-  flutter: ">=0.0.2 <0.1.0"
-  syncbase: ">=0.0.6 <0.1.0"
+  flutter:
+    path: "../../git/flutter/packages/flutter"
+  syncbase: ">=0.0.15 <0.1.0"
 dev_dependencies:
-  sky_tools: ">=0.0.27 <0.1.0"
+  flutter_tools:
+    path: "../../git/flutter/packages/flutter_tools"
